# FamilyVault

./: :wa  README.md  fakecreds.txt  package-lock.json  package.json
.github/workflows/: cdk-workflow-yml  cicd-workflow.yml  monorepo-workflow.yml  react-workflow.yml  secrets-scan.yml
.husky/: pre-commit  pre-push  sdfs
FamilyVaultCdk/: .gitignore  README.md  buildspec.yml  cdk.json  globalconfig.ts  outputs.json  package-lock.json  package.json  tsconfig.json
FamilyVaultCdk/documentation/: photo-s3-key-structure.md  upload-photo.md
FamilyVaultCdk/lib/: AppConfig.ts  AppStack.ts  CloudFront.ts  CognitoUserPool.ts  DynamoDbTable.ts  Gateway.ts  S3Bucket.ts  appConstants.ts
FamilyVaultCdk/lib/StepFunctions/photo-workflows/lambdas/resize/: Cargo.toml
FamilyVaultCdk/lib/StepFunctions/photo-workflows/lambdas/resize/src/: main.rs
FamilyVaultCdk/lib/StepFunctions/photo-workflows/lambdas/validationAndTransformation/: Cargo.toml
FamilyVaultCdk/lib/StepFunctions/photo-workflows/lambdas/validationAndTransformation/src/: main.rs
FamilyVaultCdk/mockevents/: examplejpgupload.json
FamilyVaultCdk/scripts/: deploy-dev-environment.sh
FamilyVaultCdk/test/: FamilyVaultTests.test.ts  family_vault.test.ts
FamilyVaultCicd/: README.md  cdk.json  eslint.config.mjs  package-lock.json  package.json
FamilyVaultCicd/lib/: FamilyVaultPipeline.old.ts  FamilyVaultPipeline.ts  cicdDynamodb.ts  cicd_stack.ts  family_vault_cicd-stack.ts  (+1 more)
FamilyVaultReact/: .gitignore  README.md  package.json  webpack.config.js
FamilyVaultTerraform/: .gitignore  main.tf  variables.tf
(+39 files in other folders)
