[package]
name = "resize"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
lambda_runtime = "0.11.1"
tokio = { version = "1", features = ["macros"] }
aws-config = "1.1.8"
aws-sdk-s3 = "1.20.0"
aws-types = "1.1.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
image = "0.25.1"


[[bin]]
name = "bootstrap"
path = "src/main.rs"
