[package]
name = "validationAndTransformation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.8"
aws-sdk-s3 = "1.20.0"
aws-types = "1.1.8"
lambda_runtime = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
imagesize = "0.12"



[[bin]]
name = "bootstrap"
path = "src/main.rs"
